--- a/css/base/common.css
+++ b/css/base/common.css
@@ -8,7 +8,8 @@
   text-decoration: none;
 }
 
-ol, ul {
+ol,
+ul {
   list-style-type: none;
   margin-top: 0;
   margin-bottom: 0;
@@ -28,6 +29,7 @@ p {
 
 img {
   display: block;
+  margin: 0;
 }
 
 .modal-toggle {
@@ -35,7 +37,7 @@ img {
 }
 
 body {
-  font-family: "Roboto", sans-serif;
+  font-family: 'Roboto', sans-serif;
   color: var(--slate);
   background-color: var(--white);
 }
@@ -44,4 +46,3 @@ body {
   padding-top: 50px;
   padding-bottom: 50px;
 }
-
