--- a/css/layout/problem-6-3.css
+++ b/css/layout/problem-6-3.css
@@ -1,26 +1,28 @@
-.gallery {
+.color-picker {
   display: flex;
-  flex-wrap: wrap;
-  gap: 30px;
+  column-gap: 4px;
 }
 
-.gallery-item {
-  width: 330px;
-  height: 330px;
-  display: flex;
+.color-picker-btn {
+  cursor: pointer;
+  color: var(--white);
+  background-color: transparent;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  border: none;
+  border-radius: 30px;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+  padding: 16px 32px;
+  display: inline-flex;
   justify-content: center;
-  align-items: center;
-  background-color: rgba(46, 47, 66, 0.01);
-
-  border-radius: 8px;
-  box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08),
-    0px 1px 1px 0px rgba(46, 47, 66, 0.16),
-    0px 1px 6px 0px rgba(46, 47, 66, 0.08);
+  min-width: 100px;
+  height: 56px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.gallery-img {
-  width: 250px;
-  height: 250px;
-  border-radius: 8px;
-  object-fit: cover;
+.color-picker-btn:hover,
+.color-picker-btn:focus {
+  background-color: var(--green);
 }
