--- a/css/layout/problem-6-1.css
+++ b/css/layout/problem-6-1.css
@@ -12,7 +12,7 @@
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
   padding: 16px 32px;
   display: inline-flex;
-  min-width: 169px;
+  min-width: 150px;
   height: 56px;
   /* margin: 0 auto; */
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -26,8 +26,10 @@
 
 .navigation {
   display: flex;
+  flex-direction: column;
   justify-content: flex-start;
-  column-gap: 40px;
+  row-gap: 10px;
+  margin-bottom: 20px;
 }
 
 .navigation-item {
@@ -41,8 +43,6 @@
   cursor: pointer;
   display: block;
   color: var(--navyblue);
-  padding-top: 24px;
-  padding-bottom: 24px;
   position: relative;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -51,10 +51,3 @@
 .navigation-item-link:focus {
   color: var(--ocean);
 }
-/* .item {
-  font-size: 20px;
-  font-weight: 600;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  color: var(--navyblue);
-} */
