--- a/css/layout/problem-6-5.css
+++ b/css/layout/problem-6-5.css
@@ -1,27 +1,28 @@
-.input-output-wrapper {
-  width: 500px;
-  margin: 0 auto;
+.color-picker {
   display: flex;
-  flex-direction: column;
-  justify-content: center;
-  row-gap: 30px;
+  column-gap: 4px;
 }
 
-#name-input {
-  width: 400px;
-  height: 50px;
-  padding-left: 18px;
-  font-size: 20px;
-
-  border-radius: 8px;
-  border: 1px solid #bdbdbd;
+.color-picker-btn {
+  cursor: pointer;
+  color: var(--white);
+  background-color: transparent;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  border: none;
+  border-radius: 30px;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+  padding: 16px 32px;
+  display: inline-flex;
+  justify-content: center;
+  min-width: 100px;
+  height: 56px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-#name-output {
-  color: var(--green);
-}
-
-#name-input:focus-within {
-  border: 1px solid rgba(46, 47, 66, 0.08);
+.color-picker-btn:hover,
+.color-picker-btn:focus {
+  background-color: var(--green);
 }
