--- a/css/layout/problem-6-6.css
+++ b/css/layout/problem-6-6.css
@@ -1,26 +1,26 @@
-.form-wrapper {
-  width: 500px;
-  margin-left: auto;
-  margin-right: auto;
+.gallery {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 30px;
+}
+
+.gallery-item {
+  width: 330px;
+  height: 330px;
   display: flex;
   justify-content: center;
-}
+  align-items: center;
+  background-color: rgba(46, 47, 66, 0.01);
 
-#validation-input {
-  border: 3px solid #bdbdbd;
-  width: 400px;
-  height: 40px;
-  padding-left: 16px;
-  font-size: 20px;
-  font-weight: 500;
-  line-height: 1.2;
   border-radius: 8px;
+  box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08),
+    0px 1px 1px 0px rgba(46, 47, 66, 0.16),
+    0px 1px 6px 0px rgba(46, 47, 66, 0.08);
 }
 
-#validation-input.valid {
-  border-color: #4caf50;
-}
-
-#validation-input.invalid {
-  border-color: #f44336;
+.gallery-img {
+  width: 250px;
+  height: 250px;
+  border-radius: 8px;
+  object-fit: cover;
 }
