--- a/css/layout/problem-6-8.css
+++ b/css/layout/problem-6-8.css
@@ -1,10 +1,55 @@
-.login-form {
-  margin: 0 auto;
-  font-size: 20px;
-  padding: 24px;
-  width: 800px;
-  background-color: var(--dairy);
-  border-radius: 4px;
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
-    0px 2px 1px rgba(0, 0, 0, 0.2);
+.thead-row-table {
+  padding: 4px;
+  font-size: 16px;
+  text-align: left;
+  color: var(--slate);
+}
+
+.tbody-row-table {
+  padding: 4px;
+  font-size: 14px;
+  text-align: left;
+  color: var(--slate);
+}
+
+.publication-table {
+  color: var(--slate);
+}
+
+.telem-number {
+  width: 50px;
+  text-align: center;
+  border: 1px solid var(--cornflower);
+  border-top: none;
+}
+
+.telem-title {
+  width: 500px;
+  border: 1px solid var(--cornflower);
+  border-top: none;
+}
+
+.telem-type {
+  width: 100px;
+  text-align: center;
+  border: 1px solid var(--cornflower);
+  border-top: none;
+}
+.telem-where {
+  width: 400px;
+  border: 1px solid var(--cornflower);
+  border-top: none;
+}
+
+.telem-volume {
+  width: 80px;
+  text-align: center;
+  border: 1px solid var(--cornflower);
+  border-top: none;
+}
+
+.telem-authors {
+  width: 300px;
+  border: 1px solid var(--cornflower);
+  border-top: none;
 }
